[gd_scene load_steps=13 format=3 uid="uid://dogkmflijdlsd"]

[ext_resource type="Script" uid="uid://c6k1n0k2eqnby" path="res://scripts/Entities/Units/InfantryUnit.gd" id="1_ul1d2"]
[ext_resource type="Texture2D" uid="uid://dsohn3oisr61f" path="res://assets/sprites/EntitySprite/Units/SpriteInfantry/Sprites/Idle/Infantry_sprite_1.png" id="2_hcrcq"]
[ext_resource type="Texture2D" uid="uid://b82l7dmeuo44h" path="res://assets/sprites/EntitySprite/Units/SpriteInfantry/Sprites/Idle/Infantry_sprite_2.png" id="3_hyaov"]
[ext_resource type="Texture2D" uid="uid://xb7wyr3omawg" path="res://assets/sprites/EntitySprite/Units/SpriteInfantry/Mask/Idle/infantry_overlay_1.png" id="4_6on2y"]
[ext_resource type="Script" uid="uid://cb8byr7cvgp20" path="res://scripts/Entities/Units/clickDetection.gd" id="4_hcrcq"]
[ext_resource type="Texture2D" uid="uid://cypi67og5m3ms" path="res://assets/sprites/EntitySprite/Units/SpriteInfantry/Mask/Idle/infantry_overlay_2.png" id="5_hcrcq"]
[ext_resource type="Script" uid="uid://ban6umbhgcv5u" path="res://scripts/Entities/Units/unitManager.gd" id="5_hyaov"]

[sub_resource type="SpriteFrames" id="SpriteFrames_y68kv"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": ExtResource("2_hcrcq")
}, {
"duration": 2.0,
"texture": ExtResource("3_hyaov")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_6on2y"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": ExtResource("4_6on2y")
}, {
"duration": 2.0,
"texture": ExtResource("5_hcrcq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wsick"]
size = Vector2(31, 27)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ul1d2"]
bg_color = Color(0.6855833, 0.09103761, 0.116925605, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6on2y"]
bg_color = Color(0.16862746, 0.7058824, 0, 1)

[node name="InfantryUnit" type="CharacterBody2D"]
script = ExtResource("1_ul1d2")
thumbnail = ExtResource("2_hcrcq")

[node name="UnitSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_y68kv")
frame_progress = 0.20359853

[node name="MaskSprite" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_6on2y")
frame_progress = 0.23078063

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("4_hcrcq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_wsick")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -12.0
offset_top = -17.0
offset_right = 12.0
offset_bottom = -16.0
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_ul1d2")
theme_override_styles/fill = SubResource("StyleBoxFlat_6on2y")
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="MovementManager" type="Node" parent="." node_paths=PackedStringArray("area2D", "MaskOverlay", "anim")]
script = ExtResource("5_hyaov")
area2D = NodePath("../Area2D")
MaskOverlay = NodePath("../MaskSprite")
anim = NodePath("../UnitSprite")
